#27 Check Responsive Course Rate Page

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -243,9 +243,9 @@
         padding-top: 70px;
     }
 
-    .pricing-one table {
+/*    .pricing-one table {
         width: 1170px;
-    }
+    }*/
 
     .about-one__content {
         margin-bottom: 40px;
